<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Java Academy</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="cnfPassword">Confirm Password</string>
    <string name="TypeEmail">enter your email</string>
    <string name="TypePassword">enter your password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_an_account">Create an account.</string>
    <string name="register">Register</string>
    <string name="sign_in">Already Got an account?\n Sign In</string>
    <string name="confirm_your_password">confirm your password</string>
    <string name="enter_your_password">enter your Password</string>
    <string name="enter_your_email">enter your email</string>
    <string name="logout">Logout</string>
    <string name="enter_a_username">enter a username</string>
    <string name="username">Username</string>
    <string name="add_value">Add Value</string>
    <string name="nestedScrollView">nestedScrollView</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="learning_java">Learning Java</string>
    <string name="update_username">Update Username</string>
    <string name="placeholder_image">Placeholder Image</string>
    <string name="first_letter_of_username">First letter of username</string>
    <string name="profile_page">Profile Page</string>
    <string name="AudioPlayback">Audio Playback</string>
    <string name="accessability">Extra Accessibility</string>
    <string name="account">Account</string>
    <string name="IntroText">Thank you for participating in this study comparing the learning rates of users with dyslexia. Take some time to explore the features of the app and use the settings page, tailor the experience to best suit you.\n\nIn your own time, work through the five main sections on the home screen from top to bottom. \n\n Thanks. </string>
    <string name="ShowMe">Don\&#39;t show me this again</string>
    <string name="ctu">Continue</string>
    <string name="description">Description</string>
    <string name="title">Title</string>
    <string name="leaning_java_logo">Leaning Java Logo</string>
    <string name="FAB_Description">handles text to speech functionality</string>
    <string name="image_Desc">Images relating to the topic</string>
    <string name="assorted_icons">Recycler View Item</string>
    <string name="java_logo">Java Logo</string>
    <string name="audio_playback_speed">Audio playback speed</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="application_information">Application Information</string>
    <string name="dividing_line"></string>
    <string name="audio_playback_speed_selector">Audio playback Speed selector</string>
    <string name="Welcome">Welcome 🎉</string>
    <string name="preference_file_key">uk.ac.abertay.cmp400.java_app.SHARED_PREF_KEY</string>
    <string name="main_title">Main Title</string>
    <string-array name="HomeScreenTitle">
        <item>The Basic Syntax of Java</item> 
        <item>Variables</item> 
        <item>Data Types</item> 
        <item>Operators in Java</item> 
        <item>Conditional Statements</item> 

    </string-array>
    <string-array name="HomeScreenDescriptions">
        <item>This section provides and overview of basics syntax in java.</item> 
        <item>This section will look at how variables are formatted in java.</item> 
        <item>This section will look at the Data Types used is java.</item> 
        <item>This section will look at the various operators used is java.</item> 
        <item>This section will Build on previous information and look as Conditional Statements.</item> 
    </string-array>
    <string-array name="HomeScreenImages">
        <item>the_basics</item> 
        <item>variable_icon</item> 
        <item>data_types_icon</item> 
        <item>operator_icon</item> 
        <item>condition_icon</item> 

    </string-array>
    <string-array name="basics_of_java_title">
        <item>-The Basic Syntax of Java</item>
        <item>Semi Colons</item>
        <item>Round Brackets</item>
        <item>Square Brackets</item>
        <item>Curly Brackets</item>
        <item>Two slashes</item>
        <item>Slash and an asterisk</item>
        <item>Printing out a message</item>
        <item>Full Stop</item>
        <item>Colors</item>
        <item>*Note*</item>

    </string-array>
    <string-array name="basics_of_java_description">
        <item> 
            When learning about java its important to know about the <b>syntax</b>. An example of syntax would be the use of a semicolon ( <font color='@keyword'>;</font> ) at the end of a line to show the end of a statement. The following section will touch on the fundamental syntax used in java.\n\nUse this section as a point of reference if something In the coming examples is not clear.
        </item>

        <item>
            <b>Semi Colons  <font color='keyword'>;</font> </b> – Are used to show where an instruction ends and a new instruction begins. This is similar to a full stop after a sentence and is required for the code to work.
        </item>

        <item>
            <b>Round Brackets <font color='keyword'>( )</font></b> - Are used to hold additional information for a function or to hold conditions for conditional statements. (This will be covered in Conditional Statements later)
        </item>

        <item>
            <b>Square Brackets <font color='keyword'>[ ]</font></b> – Are used to create arrays which are used to store multiple values in a single variable.
        </item>

        <item>
            <b>Curly Brackets <font color='keyword'>{ }</font></b> – Are used in Conditional Statements to help structure them. Imagine them as the front and back cover in a book holding together all the pages in between. (This will be covered in Conditional Statements later so just keep it in mind.)
        </item>

        <item>
            <b>Two slashes <font color='keyword'>//</font></b> -  Are used to add comments to code on a single line. Anything after these slashes will be ignored by the program and just considered text.
        </item>

        <item>
            <b>Slash + asterisk <font color='keyword'>/* Text */ </font></b>- Is used to make multi-line comments. Anything in-between the <font color='keyword'>/*</font> and the <font color='keyword'>*/</font> will be ignored by java.
        </item>

        <item>
            <b>Printing out a message <font color='keyword'>System.out.println(“Your Message Here”)</font> </b>-  Is used to print out the text that is within the double quotations. This will be used in examples to output results.
        </item>

        <item>
            <b>Full Stop <font color='keyword'>.</font> </b>– Is used when you want to access object attributes and methods.
        </item>

        <item>
            The code examples that you will encounter in later sections will use a color schema that aims to help distinguish parts of the code.\n\n
            <ul>
                <li>Red Text - Signifies Classes.\n\n</li>
                <li>Blue text - Signifies Conditional Statements.\n\n</li>
                <li>Green Text - Signifies Text.</li>
            </ul>
        </item>

        <item>
            With these, the following examples should be more clear. This section aims to clarify the syntax used in the coming example. <b>Don\'t worry if something doesn\'t make sense as these will be clarified later in the context of the sections they are used in.\n\n</b>
        </item>
    </string-array>
    <string-array name="variables_title">
        <item>-Variables</item>
        <item>Type</item>
        <item>Name</item>
        <item>Equals sign ( = )</item>
        <item>Value</item>


    </string-array>
    <string-array name="variables_description">
        <item>Variables are used in programming to pair information such as names or numbers to a value that can be referenced later. The following example shows how this is formatted in java. \n\n<b>Type Name = value;</b></item>
        <item>The Data Type determines what kind of data is being held. (this will be explored in more detail in the following section on Data Types)</item>
        <item>The name is what will be used in the program to reference what is being stored (Such as <b>x</b> or <b>name</b>). Java is case sensitive so for example, “<u>N</u>umber” and “<u>n</u>umber” are considered two different names.</item>
        <item>This is used to assign the Variable to the Value. ‘The Variable Equals the value’.</item>
        <item>The value stored in the variable depends on the type. Some types can only store specific values and some do it better than others. This will be explored more in the next section on data types.\n\n</item>
    </string-array>
    <string-array name="variables_images">


    </string-array>
    <string-array name="data_types_title">

        <item>-Data Types</item>0
        <item>int</item>
        1
        <item>float</item>
        2
        <item>char</item>
        3
        <item>boolean</item>
        4
        <item>String</item>
        5
        <item>String Continued</item>
        6
        <item>String Continued</item>
        7

    </string-array>
    <string-array name="data_types_description">
        <item>
            This section will go over the fundamental Data types used in programming, with java being the example language.
        </item>
        
        <item>
            The <b>int</b> variable can hold whole numbers (1, 34, 190). This variable is the preferred option when handling simple numerical values.
        </item>
        
        <item>
            The <b>float</b> data type is used when you want to store numbers with a decimal, such as 19.99 or 3.1415. additionally, the value should have an “ f ” at the end of the value.
        </item>
        
        <item>
            The <b>char</b> data type is used when you want to store a single character such as ‘A’ or ‘T’. An example of this being used would be to store a pupils grade
        </item>
        
        <item>
            The <b>boolean</b> data type is used when you want to store either a true or false value.
        </item>
        
        <item>
            The <b>String</b> data type is used to store text surrounded by double quotations. Numbers can be used too as long as they are within the double-quotes.
        </item>
        
        <item>
            A <b>string</b> in java is an object, which contains methods that can perform certain operations on strings. For example, the length of a string can be found with the length() method
        </item>
        
        <item>
            In this example, the txt String uses the <b>length()</b> method to calculate this. The full stop after the txt String is used to access methods that can be used on Strings. The following is a list of what more can be done to strings\n\n
            <ul>
                <li><b>toUpperCase()</b> - the toUpperCase() method changes all the characters in a string to upper case.\n\n</li>
                <li><b>toLowerCase()</b> - Similarly, the toLowerCase() method does the opposite and changes all the characters in a string to lower case.\n\n</li>
                <li><b>Length()</b> - The length() method returns the number of characters within a String.\n\n</li>
            </ul>
            <b>*Note*</b>\n\n
            Java counts positions from zero.\n\n
            0 is the first position in a String, 1 is the second, 2 is the third…\n\n
        </item>
    </string-array>
</resources>